--- a/domains/cheinmorrison/workspace/CheinMorrisonEnvironment/.classpath
+++ b/domains/cheinmorrison/workspace/CheinMorrisonEnvironment/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/home/bryan/Soar/cbc-experimental/Soar/out/java/soar-debugger.jar"/>
+	<classpathentry kind="lib" path="/home/bryan/Documents/GitHub_Bryan-Stearns/PROPs/domains/PROPsInterface.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
